clean up css, fix game over container spacing

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,18 @@ body {
   color:rgb(243, 243, 243);
 }
 
+button {
+  padding: 0.25em 0.75em;
+  font-family: inherit;
+  cursor: pointer;
+} 
+
+button:hover {
+  transform: scale(1.01);
+}
+
+/***************** HEADER *****************/
+
 header {
   display: flex;
   justify-content: center;
@@ -26,15 +38,13 @@ header {
   font-size: l.5rem;
 }
 
-button {
-  padding: 0.25em 0.75em;
-  font-family: inherit;
-  cursor: pointer;
-} 
-
-button:hover {
-  transform: scale(1.01);
+@media (max-width: 600px) {
+  .logo {
+    font-size: 1rem;
+  }
 }
+
+/***************** MAIN *****************/
 
 main {
   display: flex;
@@ -53,15 +63,8 @@ main {
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-}
-
-.start-button {
-  display: none;
-  background-color: rgb(34, 255, 0);
-  border: solid 2px white;
-  font-size: 2rem;
 }
 
 .game-control-container {
@@ -72,13 +75,11 @@ main {
   margin-bottom: 2rem;
 }
 
-.game-over-container {
+.start-button {
   display: none;
-  text-align: center;
-}
-
-.restart-button {
-  height: auto;
+  background-color: rgb(34, 255, 0);
+  border: solid 2px white;
+  font-size: 2rem;
 }
 
 .turn-container {
@@ -94,14 +95,21 @@ main {
   padding: 0.25em 0.75em;
 }
 
+.game-over-container {
+  display: none;
+  text-align: center;
+}
+
 .game-over {
   font-size: 3rem;
   color: rgb(34, 255, 0);
 }
 
 .restart-button {
-  height: 3rem;
-  margin: auto 1rem 0;
+  background-color: rgb(34, 255, 0);
+  border: solid 2px rgb(234, 255, 0);
+  font-size: 1.5rem;
+  margin: auto;
 } 
 
 .level-container {
@@ -119,10 +127,6 @@ main {
 }
 
 @media (max-width: 600px) {
-  .logo {
-    font-size: 1rem;
-  }
-
   .turn {
     font-size: 1.5rem;
   }
@@ -142,7 +146,7 @@ main {
 
 }
 
-/***************** GAME BUTTONS *****************/
+/*** GAME BUTTONS ***/
 
 .button-container {
   position: absolute;
